# python-ais-recorder

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  todo.md
.github/workflows/: docker-publish.yml
alembic/: env.py  init.sql
alembic/versions/: 001_initial.py
src/ais_recorder/: api.py  config.py  database.py  main.py  receiver.py  retention.py  schemas.py
