[project]
name = "python-ais-recorder"
version = "0.2.0"
description = "AIS data recorder from Digitraffic to MariaDB"
authors = [
    {name = "Stefan Gofferje",email = "stefan@gofferje.net"}
]
requires-python = "^3.12"
dependencies = [
    "aiomysql (>=0.2.0,<0.3.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "structlog (>=25.0.0,<26.0.0)",
    "alembic (>=1.15.0,<2.0.0)",
]


[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "alembic (>=1.15.0,<2.0.0)",
]
